ci: add workflow_dispatch and self-trigger to deploy-hub workflow

--- a/.github/workflows/deploy-hub.yml
+++ b/.github/workflows/deploy-hub.yml
@@ -6,6 +6,8 @@ on:
       - master
     paths:
       - 'hub/**'
+      - '.github/workflows/deploy-hub.yml'
+  workflow_dispatch:
 
 permissions:
   contents: read
